feat: :sparkles: Add guitar, fortune cookie and laptop options
